# agentic_rag_for_multi_model_pdf_extraction

./: .gitignore  ARCHITECTURE.md  LICENSE  MIGRATION.md  PHASE_1_CONTEXT_FIX_ANALYSIS.md  PHASE_1_LANGFUSE_FIXES.md  PLAN.md  README.md  agentic_rag_flow.py  agentic_rag_flow_v3_original.py  app.py  dspy_mlx_adapter.py  langfuse_tracer.py  main.py  pyproject.toml  settings.example.json  test_dspy_validator.py  validator_agent.py
.github/: copilot-instructions.md
attics/: CHANGES_V2.md  PHASE_1_LANGFUSE_FIXES.md  PHASE_1_STATUS.md  PHASE_1_TOKEN_COUNTING_FIX.md  PHASE_2_COMMIT_MSG_DSPY.txt  PHASE_3_CLEANUP_COMPLETE.md  PHASE_3_MIGRATION.md  PHASE_3_RESTRUCTURING_COMPLETE.md  PHASE_4_CREWAI.md  PLAN.md
docs/: ARCHITECTURE.md  CONFIG_SETUP.md
output/: 21_77_answer.json  21_77_chunks.json  query_answer.json
src/agents/: base.py  crewai_agents.py  extraction.py  orchestrator.py  router.py  validation.py
src/core/: cache.py  config.py  crewai_pipeline.py  graph_state.py  langgraph_pipeline.py  models.py  parser.py  pipeline.py  store.py
src/integrations/: crew_mlx_tools.py  dspy_adapter.py  dspy_modules.py  langfuse.py
src/utils/: serialization.py
tests/: README.md  conftest.py  test_crewai_pipeline.py  test_dspy_validator.py  test_langgraph_pipeline.py  test_models.py  test_pipeline.py
